# trevorfrench_python

./: README.md  pyproject.toml
src/trevorfrench/: stats.py
