[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trevorfrench"
version = "0.0.2"
authors = [
  { name="Trevor French", email="FrenchTrevor@outlook.com" },
]
description = "A personal package."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://trevorfrench.com"
"Bug Tracker" = "https://trevorfrench.com"